7-4-2010

   Fixed options circ, cat, and mon, in both ace and avas, so that
   they now can apply to the dependent variable, as specified
   previously in both the help page and the fortran code.  Colin
   McCullogh did most of the work.  Frank Harrell also reported this
   bug.

   Fixed the checks on the options so that they apply to the correct
   dimension.  Previously circ and mon were not working as described.
   Thanks to Frank Harrell.

   Expanded the help pages to make them clearer and provide more
   examples.

   Jon Baron