@@ -1,0 +1,16 @@
+7813187c18b20511f88b6b3650057d73 *CHANGES
+6053812bd36c8cefa5363fd57eee2e76 *DESCRIPTION
+8b2387066467766bcc08807f2692118a *INDEX
+e649ea57e718ff01cbf8f550215b65e4 *LICENSE
+9fdfeb11f7ddba6f3aab9aaa6b1ac5dd *NAMESPACE
+442dd0d76458d0eb9fac93d79a71aa08 *R/acepack.R
+346d7c74442247d79f781617a16fd30c *R/zzz.R
+c40beeade0631086674a30c40ef0db4c *README
+720a673beec675a340036a36cd6b16af *README.ace
+4ba587580ff02aef8ea942c9b80c64ca *README.avas
+473d3304ffc1fec03893b0284959bd44 *ace.doc
+7c381591c0506ef0c4516fb9790a81bb *man/ace.Rd
+5458d8ccd26dc095ab490a39ef952ed3 *man/avas.Rd
+78c4e2fb1f92842c33124a530c995b99 *src/ace.f
+5c7c2ab36ff29198429083a185a908ab *src/avas.f
+ff626e4f6a4754a383ce9598ebcced09 *src/rlsmo.f
