@@ -1,3 +1,7 @@
+4-5-2012
+
+   Added namespace and removed stray print in avas.
+
 7-4-2010
 
    Fixed options circ, cat, and mon, in both ace and avas, so that
